@@ -85,6 +85,8 @@
 	fr:fr/mass-bug.fr.pl add_fr:add_fr/translator_pod.add
 [type:man] ../scripts/mergechanges.1 \
 	fr:fr/mergechanges.fr.1 add_fr:add_fr/translator_man.add
+[type:pod] ../scripts/mk-build-deps.pl \
+	fr:fr/mk-build-deps.fr.pl add_fr:add_fr/translator_pod.add
 [type:man] ../scripts/nmudiff.1 \
 	fr:fr/nmudiff.fr.1 add_fr:add_fr/translator_man.add
 [type:man] ../scripts/plotchangelog.1 \
