@@ -15,7 +15,7 @@ COMPLETION = $(patsubst %.bash_completion,devscripts.%,$(COMPL_FILES))
 
 GEN_MAN1S = bts.1 chdist.1 debcheckout.1 debcommit.1 deb-reversion.1 \
 	    desktop2menu.1 dget.1 licensecheck.1 mass-bug.1 rmadison.1 \
-	    svnpath.1 tagpending.1 build-rdeps.1
+	    svnpath.1 tagpending.1 build-rdeps.1 mk-build-deps.1
 
 BINDIR = /usr/bin
 LIBDIR = /usr/lib/devscripts
